# Clementine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AddEngine.cmake  BUILD_STATUS.md  Brewfile  CMakeLists.txt  Changelog  Clementine.files  Clementine.includes  DEVELOPMENT_ROADMAP.md  LICENSE_COMPLIANCE.md  README  README-TURKISH.md  README.md  RELEASE_NOTES_COMPACT_v0.0.4.md  RELEASE_NOTES_v0.0.4-experimental.md  RELEASE_SUMMARY_v0.0.4.md  TODO  Toolchain-mingw32.cmake  Version.cmake  clementine_live_stem_original.py  clementine_simple_stem.py  clementine_stem_cli.py  clementine_stem_player.py  clementine_stem_wrapper.sh  cmake_uninstall.cmake.in  create_appimage.sh  macdeploy.py  package_release.sh  pig.txt  snapcraft.yaml
doc/python/: CMakeLists.txt  doc-hello-world.epydoc  epydoc.css  generate_python_docs.cpp  generate_python_docs.py  generate_python_docs.qrc
ext/clementine-spotifyblob/: CMakeLists.txt  main.cpp  mediapipeline.cpp  mediapipeline.h  spotify_utilities.cpp  spotify_utilities.h  spotify_utilities.mm  spotifyclient.cpp  spotifyclient.h  spotifykey.h  spotifykey.h.in
ext/clementine-tagreader/: CMakeLists.txt  cloudstream.cpp  cloudstream.h  fmpsparser.h  googledrivestream.cpp  googledrivestream.h  main.cpp  tagreaderworker.cpp  tagreaderworker.h
ext/libclementine-common/: CMakeLists.txt
ext/libclementine-remote/: CMakeLists.txt  remotecontrolmessages.proto
ext/libclementine-spotifyblob/: CMakeLists.txt  blobversion.h.in  spotifymessagehandler.cpp  spotifymessagehandler.h  spotifymessages.proto
ext/libclementine-tagreader/: CMakeLists.txt  cloudstream.cpp  cloudstream.h  fmpsparser.cpp  fmpsparser.h  gmereader.cpp  gmereader.h  tagreader.cpp  tagreader.h  tagreadermessages.proto
gst/moodbar/: 01-fftw-plan-mutex.patch  CMakeLists.txt  gstfastspectrum.cpp  gstfastspectrum.h  gstfftwspectrum.c  gstfftwspectrum.h  gstmoodbar.c  gstmoodbar.h  plugin.cpp  plugin.h  spectrum.c  spectrum.h
gst/spotifytcpsrc/: CMakeLists.txt  gstspotifytcpsrc.cpp  gstspotifytcpsrc.h
gstafcsrc/: CMakeLists.txt  gstafcsrc.c  gstafcsrc.cpp  gstafcsrc.h  main.c
plasmarunner/: CMakeLists.txt  clementinerunner.cpp  clementinerunner.h  plasma-runner-clementine.desktop
scripts/: CMakeLists.txt
scripts/amazon-covers/: CMakeLists.txt  amazon_covers.py  script.ini
scripts/clipboard/: CMakeLists.txt  clipboard.py  script.ini
scripts/digitallyimported-radio/: CMakeLists.txt  common.py  diservice.py  main.py  script.ini  service.py  servicebase.py  settingsdialog.py  settingsdialog.ui  skyservice.py
scripts/google-covers/: CMakeLists.txt  google_covers.py  script.ini
scripts/invalidate-deleted/: CMakeLists.txt  invalidate_deleted.py  script.ini
scripts/nostalgia/: CMakeLists.txt  main.py  script.ini
scripts/preview/: CMakeLists.txt  main.py  script.ini
scripts/rainbowizer/: CMakeLists.txt  rainbow.py  script.ini
scripts/remove-duplicates/: CMakeLists.txt  remove_duplicates.py  script.ini
scripts/setlistfm/: CMakeLists.txt  script.ini  setlistfm.py
scripts/shutdown/: CMakeLists.txt  main.py  script.ini
scripts/youtube/: CMakeLists.txt  script.ini  youtube.py
spotifyblob/: CMakeLists.txt  main.cpp  messages.proto  spotifyblob.cpp  spotifyblob.h  spotifyclient.cpp  spotifyclient.h  spotifykey.h  spotifymessagehandler.cpp  spotifymessages.proto  spotifymessageutils.cpp  spotifymessageutils.h
spotifyblob/blob/: CMakeLists.txt  main.cpp  mediapipeline.cpp  mediapipeline.h  spotify_utilities.cpp  spotify_utilities.h  spotify_utilities.mm  spotifyclient.cpp  spotifyclient.h
spotifyblob/common/: CMakeLists.txt  spotifymessagehandler.cpp  spotifymessagehandler.h  spotifymessages.proto
src/: AddEngine.cmake  CMakeLists.txt  about.cpp  about.h  about.ui  addstreamdialog.cpp  addstreamdialog.h  addstreamdialog.ui  albumcoverfetcher.cpp  albumcoverfetcher.h  albumcoverloader.cpp  albumcoverloader.h  albumcovermanager.cpp  albumcovermanager.h  albumcovermanager.ui  api-keys.h.in  backgroundthread.cpp  backgroundthread.h  busyindicator.cpp  busyindicator.h  clementine_cs.ts  clementine_el.qm  clementine_el.ts  clementine_empty.ts  clementine_es.qm  clementine_es.ts  clementine_fr.ts  clementine_ru.qm  clementine_ru.ts  clementine_sk.ts  commandlineoptions.cpp  commandlineoptions.h  config.h  config.h.in  crashreporting_config.h.in  database.cpp  directory.h  edittagdialog.cpp  edittagdialog.h  edittagdialog.ui  (+179 more)
src/analyzers/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzerbase.cpp  analyzerbase.h  analyzercontainer.cpp  analyzercontainer.h  analyzerfactory.cpp  baranalyzer.cpp  baranalyzer.h  blockanalyzer.cpp  blockanalyzer.h  boomanalyzer.cpp  boomanalyzer.h  fht.cpp  fht.h  glanalyzer.cpp  glanalyzer.h  glanalyzer2.cpp  glanalyzer2.h  glanalyzer3.cpp  glanalyzer3.h  glbaranalyzer.cpp  glbaranalyzer.h  glblockanalyzer.cpp  glblockanalyzer.h  nyancatanalyzer.cpp  nyancatanalyzer.h  rainbowanalyzer.cpp  rainbowanalyzer.h  rainbowdashanalyzer.cpp  rainbowdashanalyzer.h  sonogram.cpp  sonogram.h  turbine.cpp  turbine.h
src/core/: CMakeLists.txt  albumcoverfetcher.cpp  albumcoverfetcher.h  albumcoverloader.cpp  albumcoverloader.h  appearance.cpp  (+130 more)
tests/: CMakeLists.txt  albumcoverfetcher_test.cpp  albumcovermanager_test.cpp  asxiniparser_test.cpp  asxparser_test.cpp  closure_test.cpp  concurrentrun_test.cpp  cueparser_test.cpp  database_test.cpp  fileformats_test.cpp  fmpsparser_test.cpp  library_test.cpp  librarybackend_test.cpp  librarymodel_test.cpp  logging_env.h  m3uparser_test.cpp  main.cpp  megaservice_test.cpp  mergedproxymodel_test.cpp  metatypes_env.h  mock_backgroundthread.h  mock_engine.h  mock_librarybackend.cpp  mock_librarybackend.h  mock_networkaccessmanager.cpp  mock_networkaccessmanager.h  mock_player.cpp  mock_player.h  mock_playlistitem.cpp  mock_playlistitem.h  mock_playlistmanager.h  mock_settingsprovider.h  mock_sqldriver.h  mock_taglib.cpp  mock_taglib.h  mpris1_test.cpp  musicbrainzclient_test.cpp  organisedialog_test.cpp  organiseformat_test.cpp  playlist_test.cpp  (+16 more)
vlcplugins/: CMakeLists.txt  clementinescope.cpp
(+1850 files in other folders)
